修复对比字段为null时无法转换为json的BUG